# dwarfs-t

./: .ci_trigger  .gitignore  BUILD_100_PERCENT_SUCCESS.md  BUILD_SUCCESS_REPORT.md  BUILD_SYSTEM_ARCHITECTURE.md  BUILD_TEST_REPORT.md  Brewfile  CHANGES.md  CI_ARCHITECTURE_IMPLEMENTATION_PLAN.md  CI_STATUS.md  CLAUDE.md  CLEANUP_PLAN.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONVERSION_DECISION_NEEDED.md  DEVELOPER_WORKFLOW.md  FINAL_MERGE_STATUS.md  FIX_TESTS_PLAN.md  FOLLY_REMOVAL_COMPLETE.md  MERGE_CHECKLIST.md  PHASE_A_COMPLETION_REPORT.md  PHASE_B_ARCHITECTURE.md  PHASE_B_IMPLEMENTATION_STATUS.md  PHASE_B_STATUS_REPORT.md  PRIORITY4_COMPLETE.md  PROJECT_SUMMARY.md  README.DWARFS.md  README.md  STATUS_REPORT.md  TEBAKO_COMPILATION_STATUS.md  TESTING.md  TODO.pre-release-checks.md  TODO.windows.failures-20261129.md  TRACKB_ARCHITECTURE.md  TRACKB_FINAL_ANALYSIS_SUMMARY.md  TRACKB_FINAL_CONVERSION_ANALYSIS.md  TRACKB_PROGRESS_REPORT.md  TRACKB_REALISTIC_ACTION_PLAN.md  TRACK_B_COMPLETE.md  (+11 more)
.benchmark/: README.md
.docker/: build-linux.sh
.github/: CI-UNIFIED-WORKFLOW.md  CI_CD_ARCHITECTURE_PROPOSAL.md  CI_CD_ARCHITECTURE_VISUAL.md  CI_IMPROVEMENTS.md  CI_RELEASE_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MATRIX_INVENTORY.md  MIGRATION_GUIDE.md  README.md
benchmarks/: README.md  build_and_test_all.py  clean_rebuild_and_benchmark.sh  comprehensive_benchmark.py  compression_algorithm_benchmark.py  download_datasets.py  extraction_benchmark.py  generate_comprehensive_report.py  generate_compression_report.py  generate_metadata_report.py  metadata_format_benchmark.py  run_all_benchmarks.py  run_all_benchmarks.sh  run_complete_comparison.py  run_comprehensive_benchmark.sh  run_flatbuffers_benchmark.sh  run_libdwarfs_benchmark.sh  run_metadata_format_benchmark.py  run_quick_comprehensive_test.sh
benchmarks/libdwarfs/: CMakeLists.txt  benchmark_framework.h  full_extract_bench.cpp  multiple_files_bench.cpp  random_access_bench.cpp  single_file_bench.cpp
cmake/: CPM.cmake  compile.cmake  compiler_flags.cmake  config.h.in  dwarfs-config.cmake.in  ensure_mistletoe.cmake  folly.cmake  libdwarfs.cmake  libdwarfs_tool.cmake  manpage.cmake  metadata_serialization.cmake  msys-toolchain.cmake  need_flatbuffers.cmake  need_fmt.cmake  need_fuse.cmake  need_gtest.cmake  need_jemalloc.cmake  need_json.cmake  need_phmap.cmake  need_range_v3.cmake  packaging.cmake  render_manpage.cmake  tebako.cmake  tests.cmake  thrift.cmake  thrift_library.cmake  tool_support.cmake  tools.cmake  version.cmake
config/: serialization_config.yaml
doc/: ARCHITECTURE_REVIEW.md  BENCHMARKING_IMPLEMENTATION_STATUS.md  BENCHMARKING_PHASE2_CONTINUATION_PROMPT.md  BENCHMARKING_PHASE_CONTINUATION_PLAN.md  BENCHMARKING_SYSTEM_ARCHITECTURE.md  BENCHMARK_CI_COMPLETE_SUMMARY.md  BENCHMARK_CI_GUIDE.md  BENCHMARK_IMPLEMENTATION_FINAL_SUMMARY.md  BENCHMARK_USER_GUIDE.md  BOTH_BUILD_FIX_CONTINUATION_PLAN.md  BOTH_BUILD_FIX_CONTINUATION_PROMPT.md  BOTH_BUILD_FIX_IMPLEMENTATION_STATUS.md  BOTH_FORMAT_EXTRACTION_FIX_COMPLETE.md  BOTH_FORMAT_FIX_CONTINUATION_PLAN.md  CHUNK_SIZE_FIX_PLAN.md  CLI_TOOLS_REFACTORING_PLAN.md  CMAKE_ENVIRONMENT_FIX_PLAN.md  COMPONENT_IMPROVEMENTS.md  COMPREHENSIVE_BENCHMARK_CONTINUATION_PLAN.md  COMPREHENSIVE_BENCHMARK_CONTINUATION_PROMPT.md  COMPREHENSIVE_BENCHMARK_GUIDE.md  COMPREHENSIVE_BENCHMARK_IMPLEMENTATION_COMPLETE.md  COMPREHENSIVE_BENCHMARK_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_BENCHMARK_SETUP.md  COMPREHENSIVE_BENCHMARK_VALIDATION_RESULTS.md  COMPRESSION_BENCHMARK_RESULTS.md  CONFIGURATION_ARCHITECTURE.md  CONTINUE_CMAKE_ENVIRONMENT_FIX.md  CREATE_CONTINUE_PLAN_PROMPT.md  CROSS_FORMAT_IMPLEMENTATION_STATUS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DIRTREE_HASH_UTILITY.md  DUAL_FORMAT_BUILD_ISSUE_ANALYSIS.md  DWARFSEXTRACT_BENCHMARKING_PLAN.md  DWARFSEXTRACT_BENCHMARK_RESULTS.md  DWARFSEXTRACT_BUG_FIX_COMPLETE_SUMMARY.md  DWARFSEXTRACT_BUG_FIX_IMPLEMENTATION_STATUS.md  DWARFSEXTRACT_FIX_IMPLEMENTATION_STATUS.md  DWARFS_BENCHMARKING_GUIDE.md  DWARFS_METADATA_FORMAT_PERFORMANCE.md  (+122 more)
docs/: INVESTIGATION-bus-error-large-file.md  index.adoc
example/static-site-server/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  build.sh  cmake_install.cmake  download_samples.py  dwarfs_loader.cpp  dwarfs_loader.h  http_server.cpp  http_server.h  main.cpp  test.sh  test_loader.cpp  vcpkg-configuration.json  vcpkg.json
example/vcpkg-consumer-test/: CMakeLists.txt  README.md  header_test.cpp  test-expect-fail.sh  test-expect-pass.sh
flatbuffers/: history.fbs  metadata.fbs
fsst/: fsst_avx512.cpp
old-docs/: BENCHMARKING_BLOCKER_STATUS_2025-11-27.md  (+55 more)
ports/: README.md
test/compat/: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  STATUS.md  config.yaml
test/compat/lib/: compatibility_tester.cpp  compatibility_tester.h  fixture_cache.cpp  fixture_cache.h  fixture_generator.cpp  fixture_generator.h  homebrew_detector.cpp  homebrew_detector.h
test/compat/scripts/: check_homebrew.sh  generate_fixtures.sh  run_tests.sh  validate_fixtures.sh
test/compat/tests/: read_homebrew_files_test.cpp  round_trip_test.cpp  write_compatible_files_test.cpp
tools/: CMakeLists.txt  dirtree_hash.py  vcpkg-configuration.json  vcpkg.json
tools/include/dwarfs/tool/: sys_char.h
tools/include/dwarfs/tool/dwarfs/: mount_handler.h  options_parser.h
tools/include/dwarfs/tool/mkdwarfs/: create_handler.h  handler_factory.h  handler_interface.h  options_parser.h  recompress_handler.h
tools/src/: dwarfs_main.cpp  dwarfsck_main.cpp  dwarfsextract_main.cpp  manpage_stubs.cpp  mkdwarfs_main.cpp  universal.cpp
tools/src/dwarfs/: argtable3_options_parser.cpp  mount_handler.cpp  options_parser.cpp
tools/src/dwarfsck/: argtable3_options_parser.cpp
tools/src/dwarfsextract/: argtable3_options_parser.cpp
tools/src/mkdwarfs/: argtable3_options_parser.cpp  create_handler.cpp  handler_factory.cpp  options_parser.cpp  recompress_handler.cpp
tools/src/tool/: argtable3_base_parser.cpp  pager.cpp  safe_main.cpp  tool.cpp  version_info.cpp
(+1379 files in other folders)
